<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoimage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_image"

        />
    <EditText
        android:id="@+id/username"
        android:layout_below="@+id/logoimage"
        android:layout_width="match_parent"
        android:hint="@string/label_username"
        android:layout_height="wrap_content"
        android:labelFor="@string/label_username"
        >

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/label_password"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        >

        <requestFocus />

    </EditText>



    <Button
        android:id="@+id/submit_button"
        android:text="@string/label_loginbutton"
        android:layout_below="@+id/password"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/fab"
        android:outlineProvider="background"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/signup_button"
        android:text="@string/label_signupbutton"
        android:layout_below="@+id/submit_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#1DE9B6"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/placepicker_button"
        android:text="@string/label_placepickerbutton"
        android:layout_below="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#26C6DA"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
