<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/on_appbar"
            app:contentScrim="@color/appbar"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/provider_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/photo_tint" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:materialThemeOverlay="@style/ThemeOverlay.GetIt.Toolbar"
                app:navigationIconTint="@color/on_appbar"
                app:popupTheme="@style/ThemeOverlay.Material3" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Widget.GetIt.DetailLabel"
                android:text="@string/typeofservice_label" />

            <customfonts.MyTextView
                android:id="@+id/type"
                style="@style/Widget.GetIt.DetailValue" />

            <TextView
                style="@style/Widget.GetIt.DetailLabel"
                android:text="@string/label_phone" />

            <customfonts.MyTextView
                android:id="@+id/phone"
                style="@style/Widget.GetIt.DetailValue" />

            <TextView
                android:id="@+id/addressLabel"
                style="@style/Widget.GetIt.DetailLabel"
                android:text="@string/label_address" />

            <customfonts.MyTextView
                android:id="@+id/address"
                style="@style/Widget.GetIt.DetailValue" />

            <TextView
                android:id="@+id/descriptionLabel"
                style="@style/Widget.GetIt.DetailLabel"
                android:text="@string/label_description" />

            <customfonts.MyTextView
                android:id="@+id/description"
                style="@style/Widget.GetIt.DetailValue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/callButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/call_provider" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/directionsButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reportButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/report_listing" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
