<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity">


    <ImageView
        android:id="@+id/logoimage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_image"
        android:transitionName="profile"

        />
    <customfonts.MyEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoimage"
        android:hint="@string/label_username"
        android:labelFor="@string/label_username"
        >

        <requestFocus />

    </customfonts.MyEditText>

    <customfonts.MyEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        >

    </customfonts.MyEditText>



    <Button
        android:id="@+id/alreadySignInButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@+id/signup_button"
        android:layout_margin="5dp"
        android:background="@drawable/ripple"
        android:backgroundTint="#42aaaf"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/label_alreadyloginbutton"
        android:textColor="@android:color/black"
        />
    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/password"
        android:background="@drawable/ripple"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#42aaaf"
        android:elevation="10dp"
        android:text="@string/label_signupbutton"
        android:textColor="@android:color/black"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@+id/alreadySignInButtonId"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</RelativeLayout>
